<resources>
    <string name="app_name" translate="false">Primeiro App</string>

    <string name="hello_world">Olá, mundo!</string>
    <string name="action_settings">Configurações</string>
    <string name="botao_1">Botão 1</string>
    <string name="botao_2">Botão 2</string>
    <string name="botao_3">Botão 3</string>
    <string name="botao_4">Botão 4</string>
    <string name="botao_5">Botão 5</string>
    <string name="botao_6">Botão 6</string>
    <string name="botao_7">Botão 7</string>
</resources>
